Updated CSS to better align when drag/drop, still has issue with width changing

--- a/Prioritizer/css/style.css
+++ b/Prioritizer/css/style.css
@@ -1,78 +1,78 @@
-html{
+html {
     font-family: 'Segoe UI';
     font-size: 14px;
     color: darkslategray;
 }
 
-.header{
-    
+.header {
     color: #6E6F77;
 }
 
-.ui-sortable-helper{
+.ui-sortable-helper {
     cursor: grabbing;
 }
 
 .row, .header {
-    height: 35px;    
+    height: 35px;
     display: table-row;
     border: 2px solid gray;
 }
 
-.row:nth-child(even){
-    background:#EEE;
+.row:nth-child(even) {
+    background: #EEE;
 }
 
-.row:nth-child(odd){
+.row:nth-child(odd) {
     background: white;
 }
 
-.element{
+.element {
     padding: 5px;
+    display: table-cell;
+    text-align: left;
+}
+
+.table-like {
+    display: table;
+    width: 100%;
+}
+
+.selectable-tags, .tags {
+    margin-top: 10px;
     display: table-cell;
 }
 
-.table-like{
-    display: table;
-     width: 100%;
-}
-
-.selectable-tags, .tags{
-    float: left;
-    margin-top: 10px;
-}
-
-.selectable-tag, .tag{
+.selectable-tag, .tag {
     color: white;
     padding: 2px;
     border-radius: 5px;
     margin: 5px;
 }
-.selectable-tag{
+
+.selectable-tag {
     cursor: pointer;
 }
 
-.sort{
+.sort {
     cursor: pointer;
 }
 
-.urgent{
+.urgent {
     background-color: #E51400;
 }
 
-.blocked{
+.blocked {
     background-color: #FF9642;
 }
 
-.green{
+.green {
     background-color: #668D3C;
 }
 
-.stage-gate{
+.stage-gate {
     background-color: #007996;
 }
 
-.unselected{
+.unselected {
     background-color: darkgray;
 }
-
